# cargo-specification

./: .prettierignore  .prettierrc.json  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  releases.yml
spec/: template.md
src/: build.rs  comment_parser.rs  errors.rs  git.rs  init.rs  lib.rs  main.rs  toml_parser.rs
src/formats/: markdown.rs  respec.rs
src/transformers/: docusaurus.rs  mdbook.rs  mod.rs
tests/: flavor_integration.rs
