[package]
name = "cargo-spec"
description = "A tool to specify your code."
version = "0.5.0"
authors = ["David Wong <david@o1labs.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
askama = "0.15.4" # HTML template
clap = { version = "4.5.55", features = ["derive"] } # CLI
comrak = "0.50.0" # markdown
miette = { version = "7.6.0", features = ["fancy"] }
notify = "8.2.0" # watch files
regex = "1" # pattern matching for transformers
serde = { version = "1.0.228", features = ["derive"] } # deserialize toml
thiserror = "2.0.18"
tinytemplate = "1.2.1" # simple template
toml = { version = "0.9.11", features = ["preserve_order"] } # deserialize toml

[dev-dependencies]
tempfile = "3" # temporary directories for integration tests
